--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursesra!</h1>
+<h1>Hello Coursera! its a test web site</h1>
 </body>
 </html>
